--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-title: Vitajte na stránke diplomovej práce Martin Krasňana
+title: Kolaboratívny grafický editor pre MediaWiki
+description: Diplomová práca
