--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "grunt-jsonlint": "1.1.0",
     "grunt-stylelint": "0.6.0",
     "stylelint-config-wikimedia": "0.4.1"
+  },
+  "dependencies": {
+    "express": "^4.15.2",
+    "socket.io": "^2.0.4"
   }
 }
