added forgotten images

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+**.ini
 .*.swp
 *~
 /.project
@@ -10,3 +11,5 @@
 !/_docs/text/*.bib
 !/_docs/text/*.bbl
 !/_docs/text/*.pdf
+!/_docs/text/images
+!/_docs/text/images/*
